<resources>
    <string name="app_name">testAppMangoFZCO</string>
    <string name="main_screen">Главный экран</string>
    <string name="profile_screen">Профиль</string>
    <string name="login_title">Вход в приложение</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="registration_title">Регистрация в приложении</string>
    <string name="verification_title">Введите код из SMS</string>
    <string name="login_subtitle">Для входа в приложение необходимо ввести номер мобильного телефона</string>
    <string name="registration_subtitle">Для регистрации в приложении необходимо личную информацию</string>
    <string name="verification_subtitle">Мы отправили сообщение на номер телефона</string>
    <string name="phone_title">Телефон</string>
    <string name="phone_enter">Введите номер телефона</string>
    <string name="your_phone">Ваш телефон</string>
    <string name="city">Город проживания</string>
    <string name="about_me">О себе</string>
    <string name="date_birthday_title">Дата рождения</string>
    <string name="your_nick">Ваш никнейм</string>
    <string name="phone_number">Номер телефона</string>
    <string name="name">Имя</string>
    <string name="user_name">Логин</string>
    <string name="code_enter">Введите код</string>
    <string name="code">Код подтверждения</string>
    <string name="code_subtitle">Код подтверждения</string>
    <string name="sign_in">Sign In</string>
    <string name="rus_code">+7</string>
    <string name="phone_num_example">1234567890</string>
    <string name="phone_num_registration">+71234567890</string>
    <string name="city_example">Moscow</string>
    <string name="date_birthday">30.04.1990</string>
    <string name="about_me_example">Рассказ о себе...</string>
    <string name="name_example">Иван</string>
    <string name="user_name_example">Ivan_IvanbI4</string>
    <string name="code_plus_phone_num_example">+71234567890</string>
    <string name="country_flag">country flag</string>
    <string name="get_code">ОТПРАВИТЬ КОД</string>
    <string name="send_registration">РЕГИСТРАЦИЯ</string>
    <string name="dont_account">У меня нет аккаунта. </string>
    <string name="dont_code">Не пришел код? </string>
    <string name="registration">Регистрация.</string>
    <string name="request_code">Запросить повторно</string>
    <string name="enter_mobile">Введите номер телефона</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash">-</string>
    <string name="telec">Телец</string>
</resources>