<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="34dp"
        android:overScrollMode="never"
        android:scrollbars="none">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/registration" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/registration_title"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/registration_subtitle"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/phone_number"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_number"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/phone_num_registration"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/name_example"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/user_name"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/user_name_example"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
                android:id="@+id/send_registration_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_button"
                android:text="@string/send_registration"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

    </LinearLayout>

</ScrollView>