<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="34dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".ui.auth.AuthFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.49" />

            <ImageView
                    android:id="@+id/change_avatar"
                    android:src="@drawable/ic_fix_row_24"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="@+id/avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    android:clickable="true"
                    app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/your_profile"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/your_phone"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/number"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:focusable="false"
                        android:gravity="center"
                        android:text="@string/phone_num_registration"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/your_nick"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/user_name_example"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:focusable="false"
                        android:inputType="text"
                        android:visibility="gone"
                        android:maxLength="20"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/nickname_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/user_name_example"
                        android:gravity="center"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                <ImageView
                        android:id="@+id/fix_row1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_fix_row_24"
                        android:contentDescription="@string/country_flag" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/city"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_city"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/city_example"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:focusable="false"
                        android:visibility="gone"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/city_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/city_example"
                        android:gravity="center"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                <ImageView
                        android:id="@+id/fix_row2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_fix_row_24"
                        android:contentDescription="@string/country_flag" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/date_birthday_title"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/input_date_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/date_birthday"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:focusable="false"
                        android:visibility="gone"
                        android:inputType="date"
                        android:maxLength="10"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/date_birthday_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/date_birthday"
                        android:gravity="center"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/telec" />

                <ImageView
                        android:id="@+id/fix_row3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_fix_row_24"
                        android:contentDescription="@string/country_flag" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/about_me"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="14dp"
                app:strokeWidth="2sp"
                app:strokeColor="@color/primary_color">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/about_me"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/about_me_example"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:focusable="false"
                        android:visibility="visible"
                        android:inputType="text"
                        android:maxLength="200"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/about_me_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text=""
                        android:gravity="center"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                <ImageView
                        android:id="@+id/fix_row4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_fix_row_24"
                        android:contentDescription="@string/country_flag" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</ScrollView>